<resources>
    <string name="app_name">Single Screen App</string>
    <string name="sophia_s_kitchen"><b>Breakfast &amp; Brunch Restaurant</b></string>
    <string name="address">11 El Lawaa Mahmoud Hamdy Khataeb Street Bab Sharq Alexandria, Egypt 21514</string>
    <string name="hello">hello</string>
    <string name="_03_4955082_03_4955089">03–4955082 / 03-4955089</string>
    <string name="https_www_facebook_com_sophiaskitcheneg"><u>https://www.facebook.com/SophiasKitchenEg</u></string>
</resources>
