<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.example.akl.singlescreenapp.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="307dp"
        android:layout_weight="1"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/sophia" />

    <RelativeLayout
        android:layout_weight="1"
        android:id="@+id/relativeLayout"
        android:layout_width="368dp"
        android:layout_height="229dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="274dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sophia_s_kitchen"
            android:fontFamily="serif-monospace"
            android:id="@+id/name_textview"
            android:textSize="25sp"
            android:padding="10dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/name_textview"
            tools:ignore="UseCompoundDrawables"
            android:id="@+id/linear_id"
            android:padding="8dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="35dp"
                app:srcCompat="@drawable/map_icon"
                android:contentDescription="@string/hello" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/address"/>

        </LinearLayout>

        <TextView
            android:textSize="15sp"
            android:padding="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_id"
            android:text="@string/_03_4955082_03_4955089"
            android:id="@+id/phone_number"/>

        <TextView
            android:textSize="17sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/phone_number"
            android:text="@string/https_www_facebook_com_sophiaskitcheneg"
            android:textColor="#0000ff"/>


    </RelativeLayout>

</LinearLayout>
